--- a/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/src/interfaces/AsignarTrabajo.form
+++ b/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/src/interfaces/AsignarTrabajo.form
@@ -222,6 +222,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Samantha Sanchez"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="textCliUno">
@@ -229,6 +230,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Ecdaly Lopez"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jAvanUno">
@@ -336,6 +338,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Ernesto Gonzales"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="textCliDos">
@@ -343,6 +346,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Sheila Sanchez"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jAvaDos">
@@ -450,6 +454,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Carlos Chavarria"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="textCliTres">
@@ -457,6 +462,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Magali Vga"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jAvaTres">
