--- a/UnADM/universidadPOO3/DPO3_U3_A2_RARP/src/cliente/ClienteInterfaz.form
+++ b/UnADM/universidadPOO3/DPO3_U3_A2_RARP/src/cliente/ClienteInterfaz.form
@@ -188,7 +188,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="jtaSintomas1">
+        <Component class="javax.swing.JTextArea" name="jtaDatosServidor">
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
