--- a/UnADM/universidadPOO3/DPO3_U3_A2_RARP/src/cliente/ClienteInterfaz.form
+++ b/UnADM/universidadPOO3/DPO3_U3_A2_RARP/src/cliente/ClienteInterfaz.form
@@ -92,8 +92,8 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jbtnEnviar" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jScrollPane2" min="-2" pref="107" max="-2" attributes="0"/>
-              <EmptySpace pref="89" max="32767" attributes="0"/>
+              <Component id="jScrollPane2" min="-2" pref="130" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
