--- a/UnADM/universidadPOO3/La Hamburguesa/src/cliente/Cliente.form
+++ b/UnADM/universidadPOO3/La Hamburguesa/src/cliente/Cliente.form
@@ -264,6 +264,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Realizar Pedido"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
